# clw

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  USAGE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: compare_tools.sh  generate_data.sh  run_benchmarks.sh
python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
python/clw_installer/: __init__.py  __main__.py  bin_wrapper.py  install.py
src/: filter.rs  freq.rs  info.rs  main.rs  paste.rs  peek.rs  sample_rows.rs  select_cols.rs  show_header.rs  stack.rs  stats.rs  transpose.rs  utils.rs
tests/: cli_test.rs  filter_integration_test.rs  freq_integration_test.rs  header_integration_test.rs  info_integration_test.rs  paste_integration_test.rs  peek_integration_test.rs  sample_integration_test.rs  select_cols_integration_test.rs  stack_integration_test.rs  stats_integration_test.rs  transpose_integration_test.rs
tests/fixtures/: dirty_inconsistent.csv  sample_comma.csv  sample_min_quoted.csv  sample_pipe.csv  single_column.csv  very_dirty.csv
