[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clw"
version = "0.1.3"  # Bump automatically with your CI workflow
description = "CLW (CSV Light Wizard) - A blazing-fast CSV/TSV manipulation tool"
readme = "../README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [
    { name = "sshu2017" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

# The Python code required to bootstrap and run the binary.
packages = ["clw_installer"]


[project.urls]
Homepage = "https://github.com/sshu2017/clw"
Repository = "https://github.com/sshu2017/clw"
Issues = "https://github.com/sshu2017/clw/issues"

[project.scripts]
clw = "clw_installer.bin_wrapper:main"

[tool.setuptools.packages.find]
include = ["clw_installer"]
