[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clw-csv"
version = "0.1.8"  # Bump automatically with your CI workflow
description = "CLW (CSV Light Wizard) - A blazing-fast CSV/TSV manipulation tool"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

authors = [
    { name = "sshu2017" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/sshu2017/clw"
Repository = "https://github.com/sshu2017/clw"
Issues = "https://github.com/sshu2017/clw/issues"

[project.scripts]
clw = "clw_installer.bin_wrapper:main"

[tool.setuptools.packages.find]
include = ["clw_installer"]
